--- a/stylin.css
+++ b/stylin.css
@@ -7,8 +7,8 @@ body {
 	position: relative;
 }
 
-h2 {
-	color: red;
+h1 {
+	color: black;
 }
 
 #title {
@@ -31,7 +31,7 @@ h2 {
 td {
 	height: 60px;
 	width: 60px;
-	background-color: #99C0C0;
+	background-color: #80deea;
 	border-radius: 3px;
 	text-align: center;
 }
